--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "authors": [
         {
             "name": "liangdong",
-            "email": "liangdong@smzdm.com"
+            "email": "owenliang1990@gmail.com"
         }
     ],
     "autoload": {
